[package]
name = "client"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chapter2_echo"
path = "src/chapter2_echo.rs"

[[bin]]
name = "chapter3_client_hello_builder"
path = "src/chapter3_client_hello_builder.rs"


[dependencies]
tokio.workspace = true
